<resources>
    <string name="app_name">RecipeBook</string>
    <string name="title_recipe_list">Recipes</string>
    <string name="recipe">Recipe</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login">Log in</string>

    <string name="directions">Directions</string>
    <string name="ingredients">Ingredients</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="action_log_out">Log out</string>
    <string name="cooked">Add to Cooked</string>
    <string name="comments">Comments</string>
    <string name="write_down_your_experiences">Write down your experiences</string>
    <string name="new_comment">New comment</string>
    <string name="send">Send</string>
    <string name="date_pattern">MMM dd, yyyy HH:mm</string>
    <string name="favorites">Favorites</string>
    <string name="my_recipes">My Recipes</string>
    <string name="cooked_recipes">Cooked</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="log_out_warning">Are you sure you want to log out?</string>
    <string name="log_out">Log out</string>
    <string name="share">Share</string>
</resources>
